<resources>
    <string name="app_name">Happy Shopping</string>
    <string name="facebook_app_id">1574482016193061</string>
    <string name="fb_login_protocol_scheme">1574482016193061</string>
    <string name="hint_email">Email</string>
    <string name="hint_pass">Password</string>
    <string name="sign_in_1">Sign in</string>
    <string name="or">or</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up">Sign up</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="sign_out">Sign out</string>
    <string name="title_ShoppingList">Shopping List</string>
    <string name="ShoppingList">Shopping List</string>
</resources>
