<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    tools:context="com.acg.midtermrequirement.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="249dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:background="@drawable/ic_happyshopping"
            android:scaleType="centerCrop" />

        <com.acg.midtermrequirement.customfont.MyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/app_name"
            android:textColor="#4c565f"
            android:textSize="35dp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorHint">

        <com.acg.midtermrequirement.customfont.MyEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="46dp"
            android:layout_marginRight="46dp"
            android:background="#0000"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="12dp"
            android:gravity="left"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorHint"
            android:textSize="16dp" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="56dp"
            android:layout_marginRight="56dp"
            android:background="#59d58d" />

        <com.acg.midtermrequirement.customfont.MyEditText
            android:id="@+id/et_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="46dp"
            android:layout_marginRight="46dp"
            android:background="#0000"
            android:drawableLeft="@drawable/pass"
            android:drawablePadding="12dp"
            android:gravity="left"
            android:hint="@string/hint_pass"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorHint"
            android:textSize="16dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="56dp"
            android:layout_marginRight="56dp"
            android:background="#59d58d" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="60dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <com.acg.midtermrequirement.customfont.MyTextView
                android:id="@+id/tv_forgot_pass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:text="@string/forgot_password"
                android:textColor="@color/colorHint"
                android:textSize="12dp" />

            <com.acg.midtermrequirement.customfont.MyTextView
                android:id="@+id/tv_sign_up"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/sign_up"
                android:textColor="@color/colorHint"
                android:textSize="12dp" />
        </LinearLayout>

        <com.acg.midtermrequirement.customfont.MyTextView
            android:id="@+id/tv_sign_in_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="11dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rect1"
            android:elevation="3dp"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/sign_in_1"
            android:textColor="@color/white"
            android:textSize="16dp" />

        <com.acg.midtermrequirement.customfont.MyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/or"
            android:textColor="@color/colorHint" />

        <LinearLayout
            android:id="@+id/lin_sign_in_fb_1"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:background="@drawable/rectfb">

            <ImageView
                android:id="@+id/img_sign_in_fb_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:src="@drawable/fb" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
